--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "calculate-cos-distance",
   "version": "1.0.0",
-  "description": "",
+  "description": "Package that provides three methods for: calculating cos distance, vector length and vector dot product",
   "main": "index.js",
+  "homepage": "https://github.com/EugeneKannou/calculate-cos-distance-js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EugeneKannou/calculate-cos-distance-js.git"
+  },
+  "dependencies": {},
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "Eugene Kannou",
+  "keywords": [
+    "dot product",
+    "vector distance",
+    "vector length"
+  ],
+  "author": "Evgeniy Mitin",
   "license": "MIT"
 }
